demos/qna-gpu: Update the Docker image tags
Update the Docker image tags for the Gradio application, the BGE
predictor, the vectorstore predictor, and the LLM transformer.

Also, amend the README file to reflect the latest changes.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering-gpu/02.serve-vectorstore.ipynb
+++ b/demos/rag-demos/question-answering-gpu/02.serve-vectorstore.ipynb
@@ -30,7 +30,7 @@
     "predictor component. This involves creating a Docker image, which then serves as your ISVC endpoint. This approach\n",
     "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
     "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
-    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore-mlde:v0.1.0`.\n",
+    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d`.\n",
     "\n",
     "Lastly, you must also deploy the embeddings model. You can accomplish this using KServe with the Triton Inference Service\n",
     "backend. Triton requires the `model-repository` directory to be organized in a specific manner, which we will discuss in\n",
@@ -263,7 +263,7 @@
     "  predictor:\n",
     "    timeout: 600\n",
     "    triton:\n",
-    "      image: dpoulopoulos/triton-inference-server:v0.1.0\n",
+    "      image: dpoulopoulos/qna-triton-gpu:v1.3.0-2d7386d\n",
     "      securityContext:\n",
     "          runAsUser: 0\n",
     "      resources:\n",
@@ -331,7 +331,7 @@
     "\n",
     "predictor_image_widget = widgets.Text(\n",
     "    description=\"Image Name:\",\n",
-    "    placeholder=\"Default: dpoulopoulos/qna-vectorstore-mlde:v0.1.0\",\n",
+    "    placeholder=\"Default: dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d\",\n",
     "    layout=widgets.Layout(width='30%'))\n",
     "submit_button = widgets.Button(description=\"Submit\")\n",
     "success_message = widgets.Output()\n",
@@ -344,7 +344,7 @@
     "    with success_message:\n",
     "        success_message.clear_output()\n",
     "        if not predictor_image:\n",
-    "            predictor_image = \"dpoulopoulos/qna-vectorstore-mlde:v0.1.0\"\n",
+    "            predictor_image = \"dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d\"\n",
     "        print(f\"The name of the predictor image will be: '{predictor_image}'\")\n",
     "    submit_button.disabled = True\n",
     "\n",
