--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -59,7 +59,7 @@
     "Execute the cell below and:\n",
     "\n",
     "1. Select `Add Endpoint`.\n",
-    "1. Select `Single Sign-on`, paste your Livy endpoint, and click `Add endpoint`.\n",
+    "1. Select `Single Sign-on` and click `Add endpoint`.\n",
     "1. Select `Create Session`.\n",
     "1. Provide a name, select the `python` language, and click `Create Session`.\n",
     "\n",
