demos/bike-sharing: Migrate to EzUA v1.3.0
Migrate the bike sharing demo to EzUA v1.3.0 and upgrade the versions
of the required libraries.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/bike-sharing/01.bike-sharing-mlflow.ipynb
+++ b/demos/bike-sharing/01.bike-sharing-mlflow.ipynb
@@ -73,6 +73,7 @@
     "import subprocess\n",
     "\n",
     "import sklearn\n",
+    "import requests\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -85,6 +86,9 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
     "from sklearn.inspection import permutation_importance\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from IPython.display import display\n",
     "\n",
     "\n",
     "plt.style.use(\"fivethirtyeight\")\n",
@@ -99,12 +103,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>MLflow Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "domain_input = widgets.Text(description='Username:', placeholder=\"i001ua.tryezmeral.com\")\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "domain = None\n",
+    "mlflow_username = None\n",
+    "mlflow_password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global domain, mlflow_username, mlflow_password\n",
+    "    domain = domain_input.value\n",
+    "    mlflow_username = username_input.value\n",
+    "    mlflow_password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(domain_input, username_input, password_input, submit_button, success_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_url = f\"https://keycloak.{domain}/realms/UA/protocol/openid-connect/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"username\" : mlflow_username,\n",
+    "    \"password\" : mlflow_password,\n",
+    "    \"grant_type\" : \"password\",\n",
+    "    \"client_id\" : \"ua-grant\",\n",
+    "}\n",
+    "\n",
+    "token_responce = requests.post(token_url, data=data, allow_redirects=True, verify=False)\n",
+    "\n",
+    "token = token_responce.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['MLFLOW_TRACKING_TOKEN'] = token\n",
     "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
     "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
     "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
     "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
     "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
-    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_URI\"] = \"http://mlflow.mlflow.svc.cluster.local:5000\""
    ]
   },
   {
@@ -160,7 +225,7 @@
    "outputs": [],
    "source": [
     "# Set up an experiment with set_exp from ezmllib.mlflow\n",
-    "experiment_name = \"bike-sharing-exp\"\n",
+    "experiment_name = \"bike-sharing\"\n",
     "set_experiment(experiment_name)"
    ]
   },
@@ -661,8 +726,8 @@
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    \"learning_rate\": [0.1, 0.05, 0.01],\n",
-    "    \"max_depth\": [4, 5, 6],\n",
+    "    \"learning_rate\": [0.1, 0.05],\n",
+    "    \"max_depth\": [4, 5],\n",
     "}"
    ]
   },
@@ -788,10 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "I5jKy850zKtS",
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_run_df = mlflow.search_runs(order_by=['metrics.RMSLE_CV ASC'],\n",
@@ -802,6 +864,15 @@
     "best_run = mlflow.get_run(best_run_df.at[0, 'run_id'])\n",
     "best_model_uri = f\"{best_run.info.artifact_uri}/model\"\n",
     "best_model = mlflow.sklearn.load_model(best_model_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_uri"
    ]
   },
   {
@@ -877,6 +948,15 @@
     "\n",
     "You compare the model's predictions with the actual values in the test dataset and calculate your chosen evaluation\n",
     "metrics. These results provide a clear indication of the model's predictive accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_uri"
    ]
   },
   {
@@ -987,7 +1067,7 @@
     "    serviceAccountName: kserve-minio-sa\n",
     "    sklearn:\n",
     "      protocolVersion: \"v2\"\n",
-    "      storageUri: \"{best_model_uri}\"\n",
+    "      storageUri: \"{best_model_uri}/model\"\n",
     "\"\"\"\n",
     "\n",
     "os.makedirs(\"manifests\", exist_ok=True)\n",
@@ -1015,9 +1095,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "bike-sharing",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "bike-sharing"
+   "name": "python3"
   },
   "kubeflow_notebook": {
    "autosnapshot": false,
