--- a/demos/bike-sharing/02.bike-sharing-prediction.ipynb
+++ b/demos/bike-sharing/02.bike-sharing-prediction.ipynb
@@ -22,7 +22,69 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests"
+    "import requests\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "domain_input = widgets.Text(description='Username:', placeholder=\"i001ua.tryezmeral.com\")\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "domain = None\n",
+    "username = None\n",
+    "password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global domain, username, password\n",
+    "    domain = domain_input.value\n",
+    "    username = username_input.value\n",
+    "    password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(domain_input, username_input, password_input, submit_button, success_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_url = f\"https://keycloak.{domain}/realms/UA/protocol/openid-connect/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"username\" : username,\n",
+    "    \"password\" : password,\n",
+    "    \"grant_type\" : \"password\",\n",
+    "    \"client_id\" : \"ua-grant\",\n",
+    "}\n",
+    "\n",
+    "token_responce = requests.post(token_url, data=data, allow_redirects=True, verify=False)\n",
+    "\n",
+    "token = token_responce.json()[\"access_token\"]"
    ]
   },
   {
@@ -32,10 +94,10 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
-    "NAMESPACE = os.getenv(\"USER\")\n",
+    "NAMESPACE = username\n",
     "DEPLOYMENT_NAME = \"bike-sharing\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
-    "SVC = f\"{DEPLOYMENT_NAME}-predictor-default.{NAMESPACE}.{DOMAIN_NAME}\"\n",
+    "SVC = f\"{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}\"\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
     "print(URL)"
@@ -69,7 +131,7 @@
     "  ]\n",
     "}\n",
     "\n",
-    "headers = {\"Authorization\": f\"Bearer {os.getenv('AUTH_TOKEN')}\"}\n",
+    "headers = {\"Authorization\": f\"Bearer {token}\"}\n",
     "response = requests.post(URL, json=inputs, headers=headers, verify=False)\n",
     "\n",
     "print(f\"Rented Bikes Per Hour: {response.json()['outputs'][0]['data']}\")"
