demos/fraud-detection: Migrate to EzUA v1.3.0
Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/fraud-detection/fraud-detection.ipynb
+++ b/demos/fraud-detection/fraud-detection.ipynb
@@ -1090,7 +1090,7 @@
     "    serviceAccountName: kserve-minio-sa\n",
     "    sklearn:\n",
     "      protocolVersion: \"v2\"\n",
-    "      storageUri: \"s3://{config['BUCKET']}/banking/pickles/logisticregression/model\"\n",
+    "      storageUri: \"s3://{config['BUCKET']}/banking/pickles/logisticregression/model/model\"\n",
     "\"\"\"\n",
     "\n",
     "os.makedirs(\"manifests\", exist_ok=True)\n",
@@ -1173,7 +1173,7 @@
     "NAMESPACE = config.get(\"NAMESPACE\")\n",
     "DEPLOYMENT_NAME = config.get(\"KSERVE_MODEL_NAME\")\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
-    "SVC = f'{DEPLOYMENT_NAME}-predictor-default.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
     "print(URL)"
@@ -1306,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
